Fexed previous days mood

--- a/classifier/feature_eng/feature_eng.ipynb
+++ b/classifier/feature_eng/feature_eng.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -311,19 +311,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'DataFrame' object has no attribute 'append'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/vd/lwysz06930196bvqpw72pf600000gn/T/ipykernel_35648/1321511011.py\u001b[0m in \u001b[0;36m?\u001b[0;34m()\u001b[0m\n\u001b[1;32m     72\u001b[0m                           \u001b[0;34m'appCat.communication'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mcounter\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"appCat.communication\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'appCat.entertainment'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mcounter\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"appCat.entertainment\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'appCat.finance'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mcounter\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"appCat.finance\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     73\u001b[0m                           \u001b[0;34m'appCat.game'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mcounter\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"appCat.game\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'appCat.office'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mcounter\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"appCat.office\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'appCat.other'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mcounter\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"appCat.other\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'appCat.social'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mcounter\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"appCat.social\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     74\u001b[0m                           'appCat.travel': counter[\"appCat.travel\"], 'appCat.unknown': counter[\"appCat.unknown\"], 'appCat.utilities': counter[\"appCat.utilities\"], 'appCat.weather': counter[\"appCat.weather\"]})\n\u001b[1;32m     75\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 76\u001b[0;31m \u001b[0mfeature_engineered\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfeature_engineered\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDataFrame\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtoAdd\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     77\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     78\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfeature_engineered\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     79\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/opt/homebrew/lib/python3.11/site-packages/pandas/core/generic.py\u001b[0m in \u001b[0;36m?\u001b[0;34m(self, name)\u001b[0m\n\u001b[1;32m   6289\u001b[0m             \u001b[0;32mand\u001b[0m \u001b[0mname\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_accessors\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   6290\u001b[0m             \u001b[0;32mand\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_info_axis\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_can_hold_identifiers_and_holds_name\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   6291\u001b[0m         ):\n\u001b[1;32m   6292\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 6293\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mobject\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__getattribute__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m: 'DataFrame' object has no attribute 'append'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           ID            timestamp  mood  arousal  valence  activity  screen  \\\n",
+      "0     AS14.01  2014-02-17 00:00:00   5.0      0.0      0.0       0.0     0.0   \n",
+      "1     AS14.01  2014-02-17 05:00:00   5.0      0.0      0.0       0.0     0.0   \n",
+      "2     AS14.01  2014-02-17 10:00:00   5.0      0.0      0.0       0.0     0.0   \n",
+      "3     AS14.01  2014-02-17 15:00:00   5.0      0.0      0.0       0.0     0.0   \n",
+      "4     AS14.01  2014-02-17 20:00:00   5.0      0.0      0.0       0.0     0.0   \n",
+      "...       ...                  ...   ...      ...      ...       ...     ...   \n",
+      "1800  AS14.06  2014-05-08 00:00:00   7.0     -1.0      1.0       0.0     0.0   \n",
+      "1801  AS14.06  2014-05-08 05:00:00   7.0     -1.0      1.0       0.0     0.0   \n",
+      "1802  AS14.06  2014-05-08 10:00:00   7.0     -1.0      1.0       0.0     0.0   \n",
+      "1803  AS14.06  2014-05-08 15:00:00   7.0     -1.0      1.0       0.0     0.0   \n",
+      "1804  AS14.06  2014-05-08 20:00:00   7.0     -1.0      1.0       0.0     0.0   \n",
+      "\n",
+      "      call  sms  appCat.builtin  ...  appCat.game  appCat.office  \\\n",
+      "0      0.0  0.0             0.0  ...          0.0            0.0   \n",
+      "1      0.0  0.0             0.0  ...          0.0            0.0   \n",
+      "2      1.0  0.0             0.0  ...          0.0            0.0   \n",
+      "3      1.0  0.0             0.0  ...          0.0            0.0   \n",
+      "4      0.0  0.0             0.0  ...          0.0            0.0   \n",
+      "...    ...  ...             ...  ...          ...            ...   \n",
+      "1800   0.0  0.0             0.0  ...          0.0            0.0   \n",
+      "1801   0.0  0.0             0.0  ...          0.0            0.0   \n",
+      "1802   0.0  0.0             0.0  ...          0.0            0.0   \n",
+      "1803   0.0  0.0             0.0  ...          0.0            0.0   \n",
+      "1804   0.0  0.0             0.0  ...          0.0            0.0   \n",
+      "\n",
+      "      appCat.other  appCat.social  appCat.travel  appCat.unknown  \\\n",
+      "0              0.0          0.000            0.0             0.0   \n",
+      "1              0.0          0.000            0.0             0.0   \n",
+      "2              0.0          0.000            0.0             0.0   \n",
+      "3              0.0          0.000            0.0             0.0   \n",
+      "4              0.0          0.000            0.0             0.0   \n",
+      "...            ...            ...            ...             ...   \n",
+      "1800           0.0          0.000            0.0             0.0   \n",
+      "1801           0.0         63.596            0.0             0.0   \n",
+      "1802           0.0          0.000            0.0             0.0   \n",
+      "1803           0.0          0.000            0.0             0.0   \n",
+      "1804           0.0          0.000            0.0             0.0   \n",
+      "\n",
+      "      appCat.utilities  appCat.weather  mood_day-1  mood_day-2  \n",
+      "0                  0.0             0.0        5.00         5.0  \n",
+      "1                  0.0             0.0        5.00         5.0  \n",
+      "2                  0.0             0.0        5.00         5.0  \n",
+      "3                  0.0             0.0        5.00         5.0  \n",
+      "4                  0.0             0.0        5.00         5.0  \n",
+      "...                ...             ...         ...         ...  \n",
+      "1800               0.0             0.0        6.75         7.0  \n",
+      "1801               0.0             0.0        6.75         7.0  \n",
+      "1802               0.0             0.0        6.75         7.0  \n",
+      "1803               0.0             0.0        6.75         7.0  \n",
+      "1804               0.0             0.0        6.75         7.0  \n",
+      "\n",
+      "[1805 rows x 23 columns]\n"
      ]
     }
    ],
@@ -356,7 +403,7 @@
     "\n",
     "toAdd = []\n",
     "\n",
-    "for id in df[\"id\"].unique():\n",
+    "for id in df[\"id\"].unique()[:5]:\n",
     "    df_id = df[df[\"id\"] == id].sort_values(by=\"time\")\n",
     "    for day in df_id[\"time\"].dt.date.unique():\n",
     "        for sec_offset in range(0, 60*60*24, probe_delta):\n",
@@ -390,20 +437,58 @@
     "                    counter[val] = current_mood[\"value\"].mean()\n",
     "            \n",
     "            # Add activity (Considering that activity entries refer to the whole hour activity)\n",
-    "            counter[\"activity\"] = df_id[(df_id[\"time\"].dt.day == day) & (df_id[\"time\"].dt.hour == start_time.hour) & df_id[\"variable\"] == \"activity\"][\"value\"].sum()\n",
+    "            counter[\"activity\"] = df_id[(df_id[\"time\"].dt.floor(\"h\") == start_time.floor(\"h\")) & (df_id[\"variable\"] == \"activity\")][\"value\"].sum()\n",
     "\n",
     "            # Add call/sms\n",
     "            counter[\"call\"] = within_time[(within_time['variable'] == \"call\")][\"value\"].sum()\n",
     "            counter[\"sms\"] = within_time[(within_time['variable'] == \"sms\")][\"value\"].sum()\n",
+    "\n",
+    "            # Add last 2 days mean\n",
+    "            for minus_days in range(-2, 0):\n",
+    "                upper_date = start_time + timedelta(days=minus_days)\n",
+    "                previous_days_mood_df = df_id[(df_id[\"time\"].dt.floor(\"D\") == upper_date.floor(\"D\")) & (df_id[\"variable\"] == \"mood\")]\n",
+    "                if previous_days_mood_df.empty:\n",
+    "                    previous_moods = df_id[(df_id[\"time\"].dt.floor(\"D\") < upper_date.floor(\"D\")) & (df_id[\"variable\"] == \"mood\")].sort_values(by=\"time\", ascending=False)\n",
+    "                    if previous_moods.empty:\n",
+    "                        previous_moods = counter[\"mood\"]\n",
+    "                    else:\n",
+    "                        previous_moods = previous_moods[\"value\"].iloc[0]\n",
+    "                else:\n",
+    "                    previous_moods = previous_days_mood_df[\"value\"].mean()\n",
+    "                counter[str(\"day\"+str(minus_days))] = previous_moods\n",
+    "\n",
+    "            #yesterday = start_time + timedelta(days=-1)\n",
+    "            #two_days_ago = yesterday + timedelta(days=-1)\n",
+    "\n",
+    "            #yesterday_mood_df = df_id[(df_id[\"time\"].dt.day == yesterday.dt.day) & (df_id[\"activity\"] == \"mood\")]\n",
+    "            #if yesterday_mood_df.empty:\n",
+    "            #    previous_moods = df_id[(df_id[\"time\"].dt.day < yesterday.dt.day) & (df_id[\"activity\"] == \"mood\")].sort_values(by=\"time\", ascending=False)\n",
+    "            #    if previous_moods.empty:\n",
+    "            #        yesterday_mood = counter[\"mood\"]\n",
+    "            #    else:\n",
+    "            #        yesterday_mood = previous_moods[\"value\"].iloc[0]\n",
+    "            #else:\n",
+    "            #    yesterday_mood= yesterday_mood_df[\"value\"].mean()\n",
+    "\n",
+    "            #two_days_ago = df_id[(df_id[\"time\"].dt.day == two_days_ago.dt.day) & (df_id[\"activity\"] == \"mood\")]\n",
+    "            #if two_days_ago.empty:\n",
+    "            #    two_days_ago_moods = df_id[(df_id[\"time\"].dt.day < two_days_ago.dt.day) & (df_id[\"activity\"] == \"mood\")].sort_values(by=\"time\", ascending=False)\n",
+    "            #    if two_days_ago_moods.empty:\n",
+    "            #        two_days_mood = counter[\"mood\"]\n",
+    "            #    else:\n",
+    "            #        two_days_mood = two_days_ago_moods[\"value\"].iloc[0]\n",
+    "            #else:\n",
+    "            #    two_days_mood = two_days_ago_moods[\"value\"].mean()\n",
     "\n",
     "            # Add new entry to list\n",
     "            toAdd.append({'ID': id, 'timestamp': str(start_time), 'mood': counter[\"mood\"], 'arousal': counter[\"circumplex.arousal\"], 'valence': counter[\"circumplex.valence\"], \n",
     "                          'activity': counter[\"activity\"], 'screen': counter[\"screen\"], 'call': counter[\"call\"], 'sms': counter[\"sms\"], 'appCat.builtin': counter[\"appCat.builtin\"], \n",
     "                          'appCat.communication': counter[\"appCat.communication\"], 'appCat.entertainment': counter[\"appCat.entertainment\"], 'appCat.finance': counter[\"appCat.finance\"],\n",
     "                          'appCat.game': counter[\"appCat.game\"], 'appCat.office': counter[\"appCat.office\"], 'appCat.other': counter[\"appCat.other\"], 'appCat.social': counter[\"appCat.social\"], \n",
-    "                          'appCat.travel': counter[\"appCat.travel\"], 'appCat.unknown': counter[\"appCat.unknown\"], 'appCat.utilities': counter[\"appCat.utilities\"], 'appCat.weather': counter[\"appCat.weather\"]})\n",
+    "                          'appCat.travel': counter[\"appCat.travel\"], 'appCat.unknown': counter[\"appCat.unknown\"], 'appCat.utilities': counter[\"appCat.utilities\"], 'appCat.weather': counter[\"appCat.weather\"],\n",
+    "                          'mood_day-1': counter[\"day-1\"], 'mood_day-2': counter[\"day-2\"]})\n",
     "            \n",
-    "feature_engineered = feature_engineered.append(pd.DataFrame(toAdd))\n",
+    "feature_engineered = pd.DataFrame(toAdd)\n",
     "\n",
     "print(feature_engineered)\n",
     "\n"
