Feature engineering on all IDs

--- a/classifier/feature_eng/feature_eng.ipynb
+++ b/classifier/feature_eng/feature_eng.ipynb
@@ -403,7 +403,7 @@
     "\n",
     "toAdd = []\n",
     "\n",
-    "for id in df[\"id\"].unique()[:5]:\n",
+    "for id in df[\"id\"].unique():\n",
     "    df_id = df[df[\"id\"] == id].sort_values(by=\"time\")\n",
     "    for day in df_id[\"time\"].dt.date.unique():\n",
     "        for sec_offset in range(0, 60*60*24, probe_delta):\n",
@@ -456,29 +456,6 @@
     "                else:\n",
     "                    previous_moods = previous_days_mood_df[\"value\"].mean()\n",
     "                counter[str(\"day\"+str(minus_days))] = previous_moods\n",
-    "\n",
-    "            #yesterday = start_time + timedelta(days=-1)\n",
-    "            #two_days_ago = yesterday + timedelta(days=-1)\n",
-    "\n",
-    "            #yesterday_mood_df = df_id[(df_id[\"time\"].dt.day == yesterday.dt.day) & (df_id[\"activity\"] == \"mood\")]\n",
-    "            #if yesterday_mood_df.empty:\n",
-    "            #    previous_moods = df_id[(df_id[\"time\"].dt.day < yesterday.dt.day) & (df_id[\"activity\"] == \"mood\")].sort_values(by=\"time\", ascending=False)\n",
-    "            #    if previous_moods.empty:\n",
-    "            #        yesterday_mood = counter[\"mood\"]\n",
-    "            #    else:\n",
-    "            #        yesterday_mood = previous_moods[\"value\"].iloc[0]\n",
-    "            #else:\n",
-    "            #    yesterday_mood= yesterday_mood_df[\"value\"].mean()\n",
-    "\n",
-    "            #two_days_ago = df_id[(df_id[\"time\"].dt.day == two_days_ago.dt.day) & (df_id[\"activity\"] == \"mood\")]\n",
-    "            #if two_days_ago.empty:\n",
-    "            #    two_days_ago_moods = df_id[(df_id[\"time\"].dt.day < two_days_ago.dt.day) & (df_id[\"activity\"] == \"mood\")].sort_values(by=\"time\", ascending=False)\n",
-    "            #    if two_days_ago_moods.empty:\n",
-    "            #        two_days_mood = counter[\"mood\"]\n",
-    "            #    else:\n",
-    "            #        two_days_mood = two_days_ago_moods[\"value\"].iloc[0]\n",
-    "            #else:\n",
-    "            #    two_days_mood = two_days_ago_moods[\"value\"].mean()\n",
     "\n",
     "            # Add new entry to list\n",
     "            toAdd.append({'ID': id, 'timestamp': str(start_time), 'mood': counter[\"mood\"], 'arousal': counter[\"circumplex.arousal\"], 'valence': counter[\"circumplex.valence\"], \n",
