Added tagret label to feature_engineered dataframe

--- a/classifier/feature_eng/feature_eng.ipynb
+++ b/classifier/feature_eng/feature_eng.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -325,11 +325,11 @@
       "3     AS14.01  2014-02-17 15:00:00   5.0      0.0      0.0       0.0     0.0   \n",
       "4     AS14.01  2014-02-17 20:00:00   5.0      0.0      0.0       0.0     0.0   \n",
       "...       ...                  ...   ...      ...      ...       ...     ...   \n",
-      "1800  AS14.06  2014-05-08 00:00:00   7.0     -1.0      1.0       0.0     0.0   \n",
-      "1801  AS14.06  2014-05-08 05:00:00   7.0     -1.0      1.0       0.0     0.0   \n",
-      "1802  AS14.06  2014-05-08 10:00:00   7.0     -1.0      1.0       0.0     0.0   \n",
-      "1803  AS14.06  2014-05-08 15:00:00   7.0     -1.0      1.0       0.0     0.0   \n",
-      "1804  AS14.06  2014-05-08 20:00:00   7.0     -1.0      1.0       0.0     0.0   \n",
+      "9860  AS14.33  2014-05-31 00:00:00   6.0     -2.0     -1.0       0.0     0.0   \n",
+      "9861  AS14.33  2014-05-31 05:00:00   6.0     -2.0     -1.0       0.0     0.0   \n",
+      "9862  AS14.33  2014-05-31 10:00:00   7.0     -2.0      1.0       0.0     0.0   \n",
+      "9863  AS14.33  2014-05-31 15:00:00   7.0     -2.0      1.0       0.0     0.0   \n",
+      "9864  AS14.33  2014-05-31 20:00:00   7.0     -2.0      1.0       0.0     0.0   \n",
       "\n",
       "      call  sms  appCat.builtin  ...  appCat.game  appCat.office  \\\n",
       "0      0.0  0.0             0.0  ...          0.0            0.0   \n",
@@ -338,39 +338,39 @@
       "3      1.0  0.0             0.0  ...          0.0            0.0   \n",
       "4      0.0  0.0             0.0  ...          0.0            0.0   \n",
       "...    ...  ...             ...  ...          ...            ...   \n",
-      "1800   0.0  0.0             0.0  ...          0.0            0.0   \n",
-      "1801   0.0  0.0             0.0  ...          0.0            0.0   \n",
-      "1802   0.0  0.0             0.0  ...          0.0            0.0   \n",
-      "1803   0.0  0.0             0.0  ...          0.0            0.0   \n",
-      "1804   0.0  0.0             0.0  ...          0.0            0.0   \n",
+      "9860   0.0  0.0             0.0  ...          0.0            0.0   \n",
+      "9861   0.0  0.0             0.0  ...          0.0            0.0   \n",
+      "9862   0.0  0.0             0.0  ...          0.0            0.0   \n",
+      "9863   0.0  0.0             0.0  ...          0.0            0.0   \n",
+      "9864   0.0  0.0             0.0  ...          0.0            0.0   \n",
       "\n",
       "      appCat.other  appCat.social  appCat.travel  appCat.unknown  \\\n",
-      "0              0.0          0.000            0.0             0.0   \n",
-      "1              0.0          0.000            0.0             0.0   \n",
-      "2              0.0          0.000            0.0             0.0   \n",
-      "3              0.0          0.000            0.0             0.0   \n",
-      "4              0.0          0.000            0.0             0.0   \n",
+      "0              0.0            0.0            0.0             0.0   \n",
+      "1              0.0            0.0            0.0             0.0   \n",
+      "2              0.0            0.0            0.0             0.0   \n",
+      "3              0.0            0.0            0.0             0.0   \n",
+      "4              0.0            0.0            0.0             0.0   \n",
       "...            ...            ...            ...             ...   \n",
-      "1800           0.0          0.000            0.0             0.0   \n",
-      "1801           0.0         63.596            0.0             0.0   \n",
-      "1802           0.0          0.000            0.0             0.0   \n",
-      "1803           0.0          0.000            0.0             0.0   \n",
-      "1804           0.0          0.000            0.0             0.0   \n",
+      "9860           0.0            0.0            0.0             0.0   \n",
+      "9861           0.0            0.0            0.0             0.0   \n",
+      "9862           0.0            0.0            0.0             0.0   \n",
+      "9863           0.0            0.0            0.0             0.0   \n",
+      "9864           0.0            0.0            0.0             0.0   \n",
       "\n",
       "      appCat.utilities  appCat.weather  mood_day-1  mood_day-2  \n",
-      "0                  0.0             0.0        5.00         5.0  \n",
-      "1                  0.0             0.0        5.00         5.0  \n",
-      "2                  0.0             0.0        5.00         5.0  \n",
-      "3                  0.0             0.0        5.00         5.0  \n",
-      "4                  0.0             0.0        5.00         5.0  \n",
+      "0                  0.0             0.0         5.0         5.0  \n",
+      "1                  0.0             0.0         5.0         5.0  \n",
+      "2                  0.0             0.0         5.0         5.0  \n",
+      "3                  0.0             0.0         5.0         5.0  \n",
+      "4                  0.0             0.0         5.0         5.0  \n",
       "...                ...             ...         ...         ...  \n",
-      "1800               0.0             0.0        6.75         7.0  \n",
-      "1801               0.0             0.0        6.75         7.0  \n",
-      "1802               0.0             0.0        6.75         7.0  \n",
-      "1803               0.0             0.0        6.75         7.0  \n",
-      "1804               0.0             0.0        6.75         7.0  \n",
+      "9860               0.0             0.0         6.8         7.0  \n",
+      "9861               0.0             0.0         6.8         7.0  \n",
+      "9862               0.0             0.0         6.8         7.0  \n",
+      "9863               0.0             0.0         6.8         7.0  \n",
+      "9864               0.0             0.0         6.8         7.0  \n",
       "\n",
-      "[1805 rows x 23 columns]\n"
+      "[9865 rows x 23 columns]\n"
      ]
     }
    ],
@@ -427,9 +427,11 @@
     "                    if previous_moods.empty:\n",
     "                        if val in [\"mood\"]:\n",
     "                        # If no mood recorded set to 5 (half of the total)\n",
+    "                        # TODO As default use the mean value of the population\n",
     "                            counter[val] = 5\n",
     "                        else:\n",
     "                            # If circumplex.* set to mid value which is 0\n",
+    "                            # TODO As default use the mean value of the population\n",
     "                            counter[val] = 0\n",
     "                    else:\n",
     "                        counter[val] = previous_moods[\"value\"].iloc[0]\n",
@@ -469,6 +471,83 @@
     "\n",
     "print(feature_engineered)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           ID            timestamp  mood  arousal  valence  activity  screen  \\\n",
+      "0     AS14.01  2014-02-26 00:00:00   5.0      0.0      0.0       0.0     0.0   \n",
+      "1     AS14.01  2014-02-26 05:00:00   5.0      0.0      0.0       0.0     0.0   \n",
+      "2     AS14.01  2014-02-26 10:00:00   6.0     -1.0      0.5       0.0     0.0   \n",
+      "3     AS14.01  2014-02-26 15:00:00   6.0     -0.5      1.0       0.0     0.0   \n",
+      "4     AS14.01  2014-02-26 20:00:00   7.0      1.0      1.0       0.0     0.0   \n",
+      "...       ...                  ...   ...      ...      ...       ...     ...   \n",
+      "6335  AS14.33  2014-05-31 00:00:00   6.0     -2.0     -1.0       0.0     0.0   \n",
+      "6336  AS14.33  2014-05-31 05:00:00   6.0     -2.0     -1.0       0.0     0.0   \n",
+      "6337  AS14.33  2014-05-31 10:00:00   7.0     -2.0      1.0       0.0     0.0   \n",
+      "6338  AS14.33  2014-05-31 15:00:00   7.0     -2.0      1.0       0.0     0.0   \n",
+      "6339  AS14.33  2014-05-31 20:00:00   7.0     -2.0      1.0       0.0     0.0   \n",
+      "\n",
+      "      call  sms  appCat.builtin  ...  appCat.other  appCat.social  \\\n",
+      "0      0.0  0.0             0.0  ...           0.0            0.0   \n",
+      "1      0.0  0.0             0.0  ...           0.0            0.0   \n",
+      "2      0.0  0.0             0.0  ...           0.0            0.0   \n",
+      "3      1.0  1.0             0.0  ...           0.0            0.0   \n",
+      "4      0.0  1.0             0.0  ...           0.0            0.0   \n",
+      "...    ...  ...             ...  ...           ...            ...   \n",
+      "6335   0.0  0.0             0.0  ...           0.0            0.0   \n",
+      "6336   0.0  0.0             0.0  ...           0.0            0.0   \n",
+      "6337   0.0  0.0             0.0  ...           0.0            0.0   \n",
+      "6338   0.0  0.0             0.0  ...           0.0            0.0   \n",
+      "6339   0.0  0.0             0.0  ...           0.0            0.0   \n",
+      "\n",
+      "      appCat.travel  appCat.unknown  appCat.utilities  appCat.weather  \\\n",
+      "0               0.0             0.0               0.0             0.0   \n",
+      "1               0.0             0.0               0.0             0.0   \n",
+      "2               0.0             0.0               0.0             0.0   \n",
+      "3               0.0             0.0               0.0             0.0   \n",
+      "4               0.0             0.0               0.0             0.0   \n",
+      "...             ...             ...               ...             ...   \n",
+      "6335            0.0             0.0               0.0             0.0   \n",
+      "6336            0.0             0.0               0.0             0.0   \n",
+      "6337            0.0             0.0               0.0             0.0   \n",
+      "6338            0.0             0.0               0.0             0.0   \n",
+      "6339            0.0             0.0               0.0             0.0   \n",
+      "\n",
+      "      mood_day-1  mood_day-2  next_mood  next_mood  \n",
+      "0            5.0         5.0       6.25       6.25  \n",
+      "1            5.0         5.0       6.25       6.25  \n",
+      "2            6.0         6.0       6.25       6.25  \n",
+      "3            6.0         6.0       6.25       6.25  \n",
+      "4            7.0         7.0       6.25       6.25  \n",
+      "...          ...         ...        ...        ...  \n",
+      "6335         6.8         7.0       7.00       7.00  \n",
+      "6336         6.8         7.0       7.00       7.00  \n",
+      "6337         6.8         7.0       7.00       7.00  \n",
+      "6338         6.8         7.0       7.00       7.00  \n",
+      "6339         6.8         7.0       7.00       7.00  \n",
+      "\n",
+      "[6340 rows x 25 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Add target label \"next_day_mood\"\n",
+    "# TODO: make it work\n",
+    "df_support = df\n",
+    "df_support[\"time\"] = df_support[df_support[\"variable\"] == \"mood\"][\"time\"].dt.floor(\"D\")\n",
+    "feature_engineered[\"day_only\"] = pd.to_datetime(feature_engineered[\"timestamp\"]).dt.floor(\"D\")\n",
+    "df_support = df_support.groupby([\"id\", \"time\"]).mean(\"value\")\n",
+    "feature_engineered = pd.merge(feature_engineered, df_support, left_on=[\"ID\", \"day_only\"], right_on=[\"id\", \"time\"]).drop(columns=[\"day_only\", \"Unnamed: 0\"]).rename(columns={\"value\": \"next_mood\"})\n",
+    "\n",
+    "print(feature_engineered)"
    ]
   },
   {
