--- a/classifier/feature_eng/regression_model_aggr.ipynb
+++ b/classifier/feature_eng/regression_model_aggr.ipynb
@@ -19,6 +19,7 @@
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.metrics import mean_squared_error\n",
     "\n",
     "import pandas as pd"
    ]
@@ -102,7 +103,7 @@
        "      <td>0.000</td>\n",
        "      <td>0.000</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>6</td>\n",
+       "      <td>6.250000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -125,7 +126,7 @@
        "      <td>0.000</td>\n",
        "      <td>0.000</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>6</td>\n",
+       "      <td>6.333333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -148,7 +149,7 @@
        "      <td>45.173</td>\n",
        "      <td>21.074</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>6</td>\n",
+       "      <td>6.200000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -171,7 +172,7 @@
        "      <td>45.173</td>\n",
        "      <td>21.074</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>6</td>\n",
+       "      <td>6.400000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -194,7 +195,7 @@
        "      <td>45.173</td>\n",
        "      <td>21.074</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>7</td>\n",
+       "      <td>6.800000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -230,11 +231,11 @@
        "4        915.445          45.173            21.074             0.0   \n",
        "\n",
        "   target_mood  \n",
-       "0            6  \n",
-       "1            6  \n",
-       "2            6  \n",
-       "3            6  \n",
-       "4            7  "
+       "0     6.250000  \n",
+       "1     6.333333  \n",
+       "2     6.200000  \n",
+       "3     6.400000  \n",
+       "4     6.800000  "
       ]
      },
      "execution_count": 2,
@@ -243,7 +244,7 @@
     }
    ],
    "source": [
-    "data = pd.read_csv(\"extracted_data/extracted_features_classification.csv\")\n",
+    "data = pd.read_csv(\"extracted_data/extracted_features_regression.csv\")\n",
     "\n",
     "data.head(5)"
    ]
@@ -743,14 +744,10 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'mean_squared_error' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m y_pred \u001b[38;5;241m=\u001b[39m pipeline\u001b[38;5;241m.\u001b[39mpredict(X_test)\n\u001b[0;32m----> 2\u001b[0m mse \u001b[38;5;241m=\u001b[39m \u001b[43mmean_squared_error\u001b[49m(y_test, y_pred)\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mMean Squared Error: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmse\u001b[38;5;132;01m:\u001b[39;00m\u001b[38;5;124m.2f\u001b[39m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'mean_squared_error' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Squared Error: 0.46\n"
      ]
     }
    ],
